--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 	background: #e4e5db;
 }
 /*Header*/
+/* Add the provided CSS here */
 #header {
     display: flex;
     align-items: center;
@@ -24,6 +25,10 @@
     top: 0;
     left: 0;
     animation: part1 1s ease forwards;
+    transition: top 0.3s;
+}
+.header-hidden {
+    top: -100px; /* Adjust based on header height */
 }
 #header h1{
     color: #e4e5db;
@@ -45,59 +50,7 @@
     color: #152a38;
     cursor: pointer;
 }
-/* #check{
-    display: none; 
-}
-.sidebar_menu .menu li:hover {
-    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
-}
-.btn_one i:hover {
-    font-size: 30px;
-}
-.btn_two i:hover {
-    font-size: 30 px;
-}
-.sidebar_menu .social_media i:hover{
-    opacity:1;
-    transform: scale(1.3 );
-}
-#check:checked ~ .sidebar_menu {
-    left: 0;
-}
-#check:checked ~ .btn_one i {
-    opacity: 0;
-}
-#check:checked ~ .sidebar_menu .btn_two i {
-    opacity: 1;
-}
-.sidebar_menu .btn_two i {
-  color: gray;
-  font-size: 25px;
-  line-height: 60px;
-  position: absolute;
-  left: 275px;
-  cursor: pointer;
-  opacity: 0;
-}
-.btn_one i{
-    color: #e7e1d8;
-    font-size: 25px;
-    font-weight: 700;
-    position: absolute;
-    left: 16px;
-    line-height: 60px;
-    cursor: pointer;
-    transition: all 0.1s linear;
-}
-.sidebar_menu{
-    position: fixed;
-    left: -300px;
-    height: 100vh;
-    width: 300px;
-    background-color: rgb(53, 54, 54, 0.1);
-    box-shadow: 0 0 6px rgb(147, 152, 156);
-    transition: all 0.5s linear;
-} */
+
 #navbar {
     animation: part1 1s ease forwards;
     animation-delay: 0.1s;
@@ -208,7 +161,7 @@
     height: auto;
 }
 .carousel-slide:first-child {
-    opacity: 1; /* Ensure the first slide is visible initially */
+    opacity: 1; 
 }
 .carousel-container:hover .carousel-slide {
     animation: slideAnimation 6s infinite;
